--- a/ggkt_backend/service/service-vod/src/main/resources/application.properties
+++ b/ggkt_backend/service/service-vod/src/main/resources/application.properties
@@ -24,3 +24,5 @@ tencent.cos.file.bucketname=ggkt-1319089695
 
 #mybatis日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.mapper-locations=classpath:com/atguigu/ggkt/vod/mapper/xml/*.xml
+
